2007-05-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_environment.cpp: in load_file() function strncmp() ==> strnicmp()
	* gameswf/gameswf_3ds.*: added texturing of 3D model
	* gameswf/plugins/lib3ds/test.(fla,swf): updated
	* gameswf/plugins/lib3ds/cup.3ds: removed (since does not contains texture)
	* gameswf/plugins/lib3ds/books.3ds: added 3D model that contains texture
	
2007-05-01  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: moved to gameswf/plugins/lib3ds/ directory
	* gameswf/plugins/lib3ds/test.(fla,swf): added testcase 
	* gameswf/plugins/lib3ds/cup.3ds: added 3D model that is used in test.swf

2007-04-30  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: work is go on
	
2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: added camera

2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_config.h,
	* gameswf/gameswf_sound_handler_sdl.*: 
	* gameswf/gameswf_as_classes/as_db.*,
	* gameswf/gameswf_as_classes/as_netstream.*,
	* gameswf/gameswf_as_classes/as_table.*,
	USE_MYSQL ==> TU_CONFIG_LINK_TO_MYSQL
	USE_FFMPEG ==> TU_CONFIG_LINK_TO_FFMPEG
	* gameswf/gameswf_environment.h,
	* gameswf/gameswf_3ds.*: 
	The work on 3DS files has begun

2007-04-26  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h,
	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_as_classes/as_sound.cpp,
	fixed stopAllSounds() & setVolume()
	* gameswf/gameswf_environment.*
	* gameswf/gameswf_impl.*: added loadMovie("my.jpg", ...)
	
2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_classes/as_color.cpp: added getTransform() & setTransform()
	* gameswf/gameswf_cursor.cpp: updated a bit

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_cursor.*: added clear_cursor()

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_cursor.cpp: updated cursor (arrow ==> hand)

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>
